# c_projects

./: main.cpp
Driver/: CMakeLists.txt  driver.h  main.c
FirstProj/: CMakeLists.txt  imageDetect.py  main.cpp
InjectorC/: CMakeLists.txt  main.cpp  xmake.lua
Scannibal/: CMakeLists.txt  library.cpp  library.h
Scannibal/MemoryJumper/: CMakeLists.txt  main.cpp  main.h
Scannibal/svgLibrary/: SvgMemory.h  XtraWin.h
bufferOverflowTest/: CMakeLists.txt  main.cpp
svgTestDLL/: CMakeLists.txt  library.cpp  library.h  xmake.lua
svgTestDLL/.xmake/windows/x64/: xmake.conf
svgTestDLL/.xmake/windows/x64/cache/: config  history
untitled/: main.cpp
